# bmp

./: .gitignore  CMakeLists.txt  config.json  styles.css
include/controllers/: Application.hpp
include/elements/: DirectoryDialog.hpp  icon_button.hpp  input.hpp
include/models/: FileModel.hpp
include/utils/: black&white.hpp  invert.hpp  openFile.hpp  resize.hpp
include/views/: CenterView.hpp  MainScreen.hpp  UploadView.hpp
src/: main.cpp
src/controllers/: Application.cpp
src/elements/: DirectoryDialog.cpp  icon_button.cpp  input.cpp
src/models/: FileModel.cpp
src/utils/: black&white.cpp  invert.cpp  openFile.cpp  resize.cpp
src/views/: CenterView.cpp  EditorView.cpp  EditorView.hpp  MainScreen.cpp  UploadView.cpp
